# linkedin-stats-v1

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  USER_GUIDE.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/: __init__.py  config.py  exporter.py  linkedin.py  models.py  parser.py  scraper.py  selectors.py  statistics.py
tests/: test_exporter.py  test_parser.py  test_statistics.py
